typescript/checker/tests/conformance/async/es6/asyncDeclare_es6.ts.stderr
error: Expected ';', '}' or <eof>
 --> $DIR/tests/conformance/async/es6/asyncDeclare_es6.ts:3:9
  |
3 | declare async function foo(): Promise<void>;
  |         ^^^^^
  |
note: This is the expression part of an expression statement
 --> $DIR/tests/conformance/async/es6/asyncDeclare_es6.ts:3:1
  |
3 | declare async function foo(): Promise<void>;
  | ^^^^^^^

